--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,4 @@
 [submodule "src/lib/Robotics_Cape_Installer"]
 	path = src/lib/Robotics_Cape_Installer
 	url = https://github.com/StrawsonDesign/Robotics_Cape_Installer
+	branch = master
